include/flowi/core/jobs.h

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

#pragma once

#include <flowi/fl_api.h>
#include <stdbool.h>
#include <stdint.h>
#include <stddef.h>
#include <flowi/arena/arena.h>

#ifdef __cplusplus
extern "C" {
#endif

// Job result status - what fl_jobs_is_finished reports for a handle.
typedef enum FlJobsResult {
    // Job is still running or pending.
    FlJobsResult_NotFinished = 0,
    // Job has completed.
    FlJobsResult_Finished = 1,
    // Job handle is invalid or expired.
    FlJobsResult_Invalid = 2,
} FlJobsResult;

// Job priority levels. Higher-priority jobs are dequeued before lower-priority
// ones.
typedef enum FlJobPriority {
    // Background / prefetch work.
    FlJobPriority_Low = 0,
    // Default priority.
    FlJobPriority_Normal = 1,
    // Visible content, user-facing operations.
    FlJobPriority_High = 2,
} FlJobPriority;

// Worker-thread context handed to a job function. worker_index identifies the
// worker (0..num_threads-1); scratch is a temporary arena, rewound after the
// job completes.
typedef struct FlJobsWorkerInfo {
    // Index of the worker thread (0 to num_threads-1).
    int32_t worker_index;
    // Temporary arena for scratch allocations, rewound after the job completes.
    FlArena* scratch;
} FlJobsWorkerInfo;

// Callback a job runs on a worker thread. Receives the caller's opaque
// user_data and the worker context by value.
typedef void (*FlJobsFunc)(void* user_data, FlJobsWorkerInfo info);

// Opaque handle to a scheduled job. FL_JOB_HANDLE_INVALID (0) is an
// invalid/uninitialized handle. A u64 the scheduler hands out and the caller
// passes back to query/wait.
typedef uint64_t FlJobHandle;
#define FL_JOB_HANDLE_INVALID 0

// Work-stealing job system. Create it, schedule jobs (optionally with a priority
// or a dependency), query or wait on their handles, then destroy it.
// Direct API - hand-written bodies.
// Create the global job system with num_threads workers, backed by arena.
FL_API void fl_jobs_create(FlArena* arena, int32_t num_threads);
// Schedule a job; returns its handle (or the immediate-complete sentinel when
// run synchronously from a worker).
FL_API FlJobHandle fl_jobs_add_job(FlJobsFunc func, void* user_data);
// Schedule a job that runs only after dependency completes.
FL_API FlJobHandle fl_jobs_add_job_with_dependency(FlJobsFunc func, void* user_data, FlJobHandle dependency);
// Query whether a job has finished.
FL_API FlJobsResult fl_jobs_is_finished(FlJobHandle handle);
// Block until handle completes.
FL_API void fl_jobs_wait(FlJobHandle handle);
// Destroy the global job system, joining all workers.
FL_API void fl_jobs_destroy(void);
// Number of worker threads in the global job system.
FL_API int32_t fl_jobs_num_threads(void);
// Schedule a job at a given priority.
FL_API FlJobHandle fl_jobs_add_job_with_priority(FlJobsFunc func, void* user_data, FlJobPriority priority);
// Schedule a priority job that runs only after dependency completes.
FL_API FlJobHandle fl_jobs_add_job_with_priority_and_dependency(FlJobsFunc func, void* user_data, FlJobPriority priority, FlJobHandle dependency);
// Change a pending job's priority. Returns true if changed, false if it already
// started/completed or the handle is invalid.
FL_API bool fl_jobs_set_priority(FlJobHandle handle, FlJobPriority new_priority);
// Current priority of a job, or -1 if the handle is invalid.
FL_API int32_t fl_jobs_get_priority(FlJobHandle handle);
// Allocate per-job context memory of size bytes.
FL_API void* fl_jobs_alloc_context(size_t size);
// Whether the caller is executing on the main thread.
FL_API bool fl_jobs_is_main_thread(void);

#define fl_jobs_add_job_with_dependency_impl(func, user_data, dependency) (fl_jobs_add_job_with_dependency)(func, user_data, dependency)
#ifndef FL_API_IMPLEMENTATION
// Designated-initializer convenience macro - routes directly to the fl_* body.
#define fl_jobs_add_job_with_dependency(func, user_data, ...) fl_jobs_add_job_with_dependency(func, user_data, (FlJobHandle) { __VA_ARGS__ })

#endif

#define fl_jobs_is_finished_impl(handle) (fl_jobs_is_finished)(handle)
#ifndef FL_API_IMPLEMENTATION
// Designated-initializer convenience macro - routes directly to the fl_* body.
#define fl_jobs_is_finished(...) fl_jobs_is_finished((FlJobHandle) { __VA_ARGS__ })

#endif

#define fl_jobs_wait_impl(handle) (fl_jobs_wait)(handle)
#ifndef FL_API_IMPLEMENTATION
// Designated-initializer convenience macro - routes directly to the fl_* body.
#define fl_jobs_wait(...) fl_jobs_wait((FlJobHandle) { __VA_ARGS__ })

#endif

#define fl_jobs_add_job_with_priority_and_dependency_impl(func, user_data, priority, dependency) (fl_jobs_add_job_with_priority_and_dependency)(func, user_data, priority, dependency)
#ifndef FL_API_IMPLEMENTATION
// Designated-initializer convenience macro - routes directly to the fl_* body.
#define fl_jobs_add_job_with_priority_and_dependency(func, user_data, priority, ...) fl_jobs_add_job_with_priority_and_dependency(func, user_data, priority, (FlJobHandle) { __VA_ARGS__ })

#endif

#define fl_jobs_get_priority_impl(handle) (fl_jobs_get_priority)(handle)
#ifndef FL_API_IMPLEMENTATION
// Designated-initializer convenience macro - routes directly to the fl_* body.
#define fl_jobs_get_priority(...) fl_jobs_get_priority((FlJobHandle) { __VA_ARGS__ })

#endif


#ifdef __cplusplus
}
#endif