rust/flowi_core_sys/src/generated/jobs.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

/// Job result status - what fl_jobs_is_finished reports for a handle.
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum JobsResult {
    /// Job is still running or pending.
    NotFinished = 0,
    /// Job has completed.
    Finished = 1,
    /// Job handle is invalid or expired.
    Invalid = 2,
}

const _: () = {
    assert!(core::mem::size_of::<JobsResult>() == 4, "JobsResult size drift");
    assert!(core::mem::align_of::<JobsResult>() == 4, "JobsResult align drift");
};

/// Job priority levels. Higher-priority jobs are dequeued before lower-priority
/// ones.
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum JobPriority {
    /// Background / prefetch work.
    Low = 0,
    /// Default priority.
    Normal = 1,
    /// Visible content, user-facing operations.
    High = 2,
}

const _: () = {
    assert!(core::mem::size_of::<JobPriority>() == 4, "JobPriority size drift");
    assert!(core::mem::align_of::<JobPriority>() == 4, "JobPriority align drift");
};

/// Callback a job runs on a worker thread. Receives the caller's opaque
/// user_data and the worker context by value.
pub type JobsFunc = Option<unsafe extern "C" fn(user_data: *mut core::ffi::c_void, info: crate::JobsWorkerInfo)>;

/// Opaque handle to a scheduled job. FL_JOB_HANDLE_INVALID (0) is an
/// invalid/uninitialized handle. A u64 the scheduler hands out and the caller
/// passes back to query/wait.
#[repr(transparent)]
#[derive(Copy, Clone, Debug, PartialEq, Eq, Hash)]
pub struct JobHandle(pub u64);

impl JobHandle {
    /// The invalid / "none" sentinel.
    pub const INVALID: Self = Self(0);
}

const _: () = {
    assert!(core::mem::size_of::<JobHandle>() == 8, "JobHandle size drift");
};

/// Worker-thread context handed to a job function. worker_index identifies the
/// worker (0..num_threads-1); scratch is a temporary arena, rewound after the
/// job completes.
#[repr(C)]
pub struct JobsWorkerInfo {
    /// Index of the worker thread (0 to num_threads-1).
    pub worker_index: i32,
    /// Temporary arena for scratch allocations, rewound after the job completes.
    pub scratch: *mut crate::Arena,
}

const _: () = {
    assert!(core::mem::size_of::<JobsWorkerInfo>() == 16, "JobsWorkerInfo size drift");
    assert!(core::mem::align_of::<JobsWorkerInfo>() == 8, "JobsWorkerInfo align drift");
    assert!(core::mem::offset_of!(JobsWorkerInfo, worker_index) == 0, "JobsWorkerInfo.worker_index offset drift");
    assert!(core::mem::offset_of!(JobsWorkerInfo, scratch) == 8, "JobsWorkerInfo.scratch offset drift");
};

// Work-stealing job system. Create it, schedule jobs (optionally with a priority
// or a dependency), query or wait on their handles, then destroy it.
extern "C" {
    /// Create the global job system with num_threads workers, backed by arena.
    pub fn fl_jobs_create(arena: *mut crate::Arena, num_threads: i32);
    /// Schedule a job; returns its handle (or the immediate-complete sentinel when
    /// run synchronously from a worker).
    pub fn fl_jobs_add_job(func: crate::JobsFunc, user_data: *mut core::ffi::c_void) -> crate::JobHandle;
    /// Schedule a job that runs only after dependency completes.
    pub fn fl_jobs_add_job_with_dependency(func: crate::JobsFunc, user_data: *mut core::ffi::c_void, dependency: crate::JobHandle) -> crate::JobHandle;
    /// Query whether a job has finished.
    pub fn fl_jobs_is_finished(handle: crate::JobHandle) -> crate::JobsResult;
    /// Block until handle completes.
    pub fn fl_jobs_wait(handle: crate::JobHandle);
    /// Destroy the global job system, joining all workers.
    pub fn fl_jobs_destroy();
    /// Number of worker threads in the global job system.
    pub fn fl_jobs_num_threads() -> i32;
    /// Schedule a job at a given priority.
    pub fn fl_jobs_add_job_with_priority(func: crate::JobsFunc, user_data: *mut core::ffi::c_void, priority: crate::JobPriority) -> crate::JobHandle;
    /// Schedule a priority job that runs only after dependency completes.
    pub fn fl_jobs_add_job_with_priority_and_dependency(func: crate::JobsFunc, user_data: *mut core::ffi::c_void, priority: crate::JobPriority, dependency: crate::JobHandle) -> crate::JobHandle;
    /// Change a pending job's priority. Returns true if changed, false if it already
    /// started/completed or the handle is invalid.
    pub fn fl_jobs_set_priority(handle: crate::JobHandle, new_priority: crate::JobPriority) -> bool;
    /// Current priority of a job, or -1 if the handle is invalid.
    pub fn fl_jobs_get_priority(handle: crate::JobHandle) -> i32;
    /// Allocate per-job context memory of size bytes.
    pub fn fl_jobs_alloc_context(size: usize) -> *mut core::ffi::c_void;
    /// Whether the caller is executing on the main thread.
    pub fn fl_jobs_is_main_thread() -> bool;
}

